fix(gcloud): use stderr instead of stdout in setFailed

--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -64,6 +64,6 @@ jobs:
             }
             const output = await exec.getExecOutput('gcloud', [...commandArgs, ...subCommandArgs, '--quiet', '--format="json"'], options)
             if (output.exitCode !== 0) {
-              core.setFailed(output.stdout)
+              core.setFailed(output.stderr)
             }
             core.setOutput('stdout', output.stdout)
