--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -14,6 +14,10 @@ on:
         required: false
         type: boolean
         default: false
+      add_service_account:
+        required: false
+        type: boolean
+        default: false
     outputs:
       result:
         description: the supported versions within specified days
@@ -58,20 +62,19 @@ jobs:
       - name: execute gcloud ${{ inputs.command }} job
         uses: actions/github-script@v6.4.1
         id: command
-        env:
-          EXPECT_FAILURE: ${{ inputs.expect_failure }}
         with:
           script: |
             const { parseArgsStringToArgv } = require('string-argv')
             const commandArgs = parseArgsStringToArgv('${{ inputs.command }}')
             const subCommandArgs = parseArgsStringToArgv('${{ inputs.subcommand }}')
+            const serviceAccountOpt = '${{ inputs.add_service_account }}' === 'true' ? parseArgsStringToArgv('--service-account=${{ secrets.SERVICE_ACCOUNT }}') : []
             const options = {
                 ignoreReturnCode: true
             }
-            const output = await exec.getExecOutput('gcloud', [...commandArgs, ...subCommandArgs, '--quiet', '--format="json"'], options)
-            if (output.exitCode != 0 && process.env.EXPECT_FAILURE !== 'true') {
+            const output = await exec.getExecOutput('gcloud', [...commandArgs, ...subCommandArgs, --serviceAccountOpt, '--quiet', '--format="json"'], options)
+            if (output.exitCode != 0 && '${{ inputs.expect_failure }}' !== 'true') {
               core.setFailed(output.stderr)
-            } else if (output.exitCode == 0 && process.env.EXPECT_FAILURE === 'true') {
+            } else if (output.exitCode == 0 && '${{ inputs.expect_failure }}' === 'true') {
               core.setFailed('expected failure but got success')
             }
             core.setOutput('exitCode', output.exitCode)
