chore(gcloud): use silent option for gcloud stdout

--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -65,6 +65,7 @@ jobs:
             const subCommandArgs = parseArgsStringToArgv('${{ inputs.subcommand }}')
             const options = {
                 ignoreReturnCode: true
+                silent: true
             }
             const output = await exec.getExecOutput('gcloud', [...commandArgs, ...subCommandArgs, '--quiet', '--format="json"'], options)
             if (output.exitCode != 0 && '${{ inputs.expect_failure }}' !== 'true') {
