--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,20 +1,24 @@
 name: codeQL tool cache
 
 on:
-  push:
-    branches: [main]
-    paths:
-      - '.github/workflows/codeql.yml'
   workflow_dispatch:
-  schedule:
-    - cron: '0 8 * * *'
+    inputs:
+      language:
+        required: true
+        description: identity of the runner label and codeQL language
+        type: string
+
+concurrency: github-${{ inputs.language }}
 
 jobs:
   clear:
-    name: clear
+    name: clear tool cache on ${{ inputs.language }} runner
     permissions:
       contents: none
-    runs-on: [self-hosted, provider]
+    runs-on:
+      - self-hosted
+      - provider
+      - ${{ inputs.language }}
     environment: provider
     defaults:
       run:
@@ -25,14 +29,17 @@ jobs:
           rm -rf "${{ runner.tool_cache }}/CodeQL"
 
   update:
-    name: update CodeQL
+    name: update tool cache on ${{ inputs.language }} runner
     needs: clear
     environment: provider
     permissions:
       actions: read
       contents: read
       security-events: write
-    runs-on: [self-hosted, provider]
+    runs-on:
+      - self-hosted
+      - provider
+      - ${{ inputs.language }}
     defaults:
       run:
         shell: bash
@@ -42,4 +49,4 @@ jobs:
       - name: initialize CodeQL
         uses: github/codeql-action/init@v2.21.0
         with:
-          languages: python, go, java, javascript
+          languages: ${{ inputs.language }}
