fix(maintain): eliminate slashes in command by using prefix instance filter

--- a/.github/workflows/maintain.yml
+++ b/.github/workflows/maintain.yml
@@ -52,7 +52,14 @@ jobs:
       contents: read
       id-token: write
     with:
-      subcommand: os-config patch-jobs execute --instance-filter-names="zones/europe-north1-b/instances/gh-${{ inputs.language }}-ubuntu-22" --display-name="gh-${{ inputs.language }}-ubuntu-22-apt-upgrade" --duration="3600s" --reboot-config="default" --rollout-mode="zone-by-zone" --rollout-disruption-budget-percent=25 --description="apt upgrade on GitHub Runner Ubuntu 22.04 LTS with ${{ inputs.language }} tools"
+      subcommand: os-config patch-jobs execute \
+        --instance-filter-name-prefixes="gh-${{ inputs.language }}-ubuntu-" \
+        --display-name="gh-${{ inputs.language }}-ubuntu-apt-upgrade" \
+        --duration="3600s" \
+        --reboot-config="default" \
+        --rollout-mode="zone-by-zone" \
+        --rollout-disruption-budget-percent=25 \
+        --description="apt upgrade on GitHub Runner Ubuntu 22.04 LTS with ${{ inputs.language }} tools"
 
   update:
     name: update snaps on ${{ inputs.language }} runner
