--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -78,7 +78,7 @@ jobs:
             core.setOutput('exitCode', output.exitCode)
             core.setOutput('result', output.stdout)
       - name: fail if required output is missing
-        if: (inputs.expect_output == 'true' && inputs.expect_failure != 'true') && steps.command.outputs.result == ''
+        if: inputs.expect_output && !inputs.expect_failure && steps.command.outputs.result == ''
         uses: actions/github-script@v6.4.1
         with:
           script: |
