--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -20,7 +20,7 @@ on:
         default: true
     outputs:
       result:
-        description: the supported versions within specified days
+        description: the resulting json of the executed command
         value: ${{ jobs.execute.outputs.result }}
 
 jobs:
@@ -51,36 +51,11 @@ jobs:
           skip_install: true
           version: ''
           project_id: github-matfax
-      - name: set up Node.js
-        uses: actions/setup-node@v3.7.0
-        with:
-          node-version: lts/Hydrogen
-          cache: npm
-      - name: install node dependencies
-        run: npm ci
       - name: execute gcloud ${{ inputs.command }} job
-        uses: actions/github-script@v6.4.1
         id: command
+        uses: ./gcloud
         with:
-          script: |
-            const { parseArgsStringToArgv } = require('string-argv')
-            const commandArgs = parseArgsStringToArgv('${{ inputs.command }}')
-            const subCommandArgs = parseArgsStringToArgv('${{ inputs.subcommand }}')
-            const options = {
-                ignoreReturnCode: true,
-                silent: true,
-            }
-            const output = await exec.getExecOutput('gcloud', [...commandArgs, ...subCommandArgs, '--quiet', '--format="json"'], options)
-            if (output.exitCode != 0 && '${{ inputs.expect_failure }}' !== 'true') {
-              core.setFailed(output.stderr)
-            } else if (output.exitCode == 0 && '${{ inputs.expect_failure }}' === 'true') {
-              core.setFailed('expected failure but got success')
-            }
-            core.setOutput('exitCode', output.exitCode)
-            core.setOutput('result', output.stdout)
-      - name: fail if required output is missing
-        if: inputs.expect_output && !inputs.expect_failure && steps.command.outputs.result == ''
-        uses: actions/github-script@v6.4.1
-        with:
-          script: |
-            core.setFailed('expected output but got nothing')
+          subcommand: ${{ inputs.subcommand }}
+          command: ${{ inputs.command }}
+          expect_failure: ${{ inputs.expect_failure }}
+          expect_output: ${{ inputs.expect_output }}
