--- a/gcloud/package.json
+++ b/gcloud/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/matfax/tool-cache-provider",
   "dependencies": {
+    "@actions/core": "~1.10.0",
+    "@actions/exec": "~1.1.1",
     "string-argv": "~0.3.2"
   }
 }
