--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "deploy-github-runner",
   "version": "1.0.0",
   "description": "deploy github runner from tool cache provider",
-  "main": "src/action.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo 'Error: no test specified'"
   },
@@ -16,6 +16,10 @@
     "url": "https://github.com/matfax/tool-cache-provider/issues"
   },
   "homepage": "https://github.com/matfax/tool-cache-provider",
+  "workspaces": [
+    "src",
+    "gcloud"
+  ],
   "dependencies": {
     "@actions/core": "~1.10.0",
     "@actions/exec": "~1.1.1"
