--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -13,7 +13,7 @@ jobs:
       contents: read
       id-token: write
     with:
-      subcommand: instances describe gh-ubuntu-22 --zone=europe-north1-b
+      subcommand: instances describe gh-ubuntu-22 --zone=${{ env.ZONE }}
 
   backup:
     name: backup instance
@@ -26,6 +26,6 @@ jobs:
     with:
       subcommand: machine-images create gh-ubuntu-22-r${{ github.run_number }}
         --source-instance=gh-ubuntu-22
-        --source-instance-zone=europe-north1-b
+        --source-instance-zone=${{ env.ZONE }}
         --storage-location=europe-north1
         --description="GitHub Runner on Ubuntu 22.04 LTS"
